--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
 	border-style: none;
 	font-size: 16px;
 	box-shadow: 0 5px 5px 0 grey;
+	transition: 0.2s;
 }
 
 .instruction:hover{
@@ -53,8 +54,7 @@ body {
 	top: 200px;
 }
 
-
-
 p{
 	text-align: center;
+	font-weight: bold;
 }
