--- a/css/style_to_do.css
+++ b/css/style_to_do.css
@@ -84,7 +84,8 @@ h2 {
 	text-align: left;
 	background-color: white;
 	display: block;
-	width: 30%;
+	width: 40%;
+    height: 10%;
 	margin-top: 10px;
 	box-shadow: 0 5px 5px grey;
 	border-radius: 1px;
