--- a/css/style_countdown.css
+++ b/css/style_countdown.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: #d6d6d6;
+    background-color: #D9FFED;
 }
 
 #container{
@@ -9,19 +9,40 @@ body{
     justify-content: center;
 }
 
+#send{
+    outline: none;
+    margin-left: 1%;
+    border-radius: 5px;
+    border: 1px solid #D9FFED;
+    box-shadow: 0px 3px 5px grey;
+    background-color: dodgerblue;
+    color: #D9FFED;
+}
+
+#send:hover{
+    cursor: pointer;
+    background-color: #111630;
+}
+
 #content{
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.calendar {
-    width: 10%;
-    outline: none;
+#choose {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 3%;
+    margin-bottom: 10%;
 }
 
-.calendar:hover{
-    cursor: pointer;
+.calendar {
+    font-family: "Roboto", sans-serif;
+    font-size: 1.5vw;
+    width: 40%;
+    outline: none;
 }
 
 .time{
@@ -35,11 +56,15 @@ body{
     text-align: center;
     color: white;
     border-radius: 6px;
-    box-shadow: 0px 5px 10px grey;
+    box-shadow: 0px 3px 20px blue;
 }
 
 .number{
-    font-size: 40px;
+    font-size: 5vw;
+}
+
+.type{
+    font-size: 1.5vw;
 }
 
 .disabled {
